c3prj1_deck/grade.txt
Grading at Mon Oct  5 06:44:38 UTC 2020
Compiling deck.c
deck.c: In function ‘print_hand’:
deck.c:6:15: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   for(int i; i< hand->n_cards; i++){
               ^
deck.c: In function ‘shuffle’:
deck.c:28:11: error: ‘i’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   for(int i; i<cards; i++){
           ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
